dashboard/openshift/zstream/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: winc-dashboard-zstream
  labels:
    app: winc-dashboard-zstream
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: winc-dashboard-zstream
  type: ClusterIP
