dashboard/openshift/zstream/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: winc-dashboard-zstream
  labels:
    app: winc-dashboard-zstream
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: winc-dashboard-zstream
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
